--- a/ai/RAPIDS/English/Python/jupyter_notebook/Challenge/Gene-Expression-Classification/Challenge.ipynb
+++ b/ai/RAPIDS/English/Python/jupyter_notebook/Challenge/Gene-Expression-Classification/Challenge.ipynb
@@ -107,7 +107,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "y = pd.read_csv('../../data/actual.csv')\n",
+    "y = pd.read_csv('../../../data/actual.csv')\n",
     "print(y.shape)\n",
     "y.head()"
    ]
@@ -145,11 +145,11 @@
    "outputs": [],
    "source": [
     "# Import training data\n",
-    "df_train = pd.read_csv('../../data/data_set_ALL_AML_train.csv')\n",
+    "df_train = pd.read_csv('../../../data/data_set_ALL_AML_train.csv')\n",
     "print(df_train.shape)\n",
     "\n",
     "# Import testing data\n",
-    "df_test = pd.read_csv('../../data/data_set_ALL_AML_independent.csv')\n",
+    "df_test = pd.read_csv('../../../data/data_set_ALL_AML_independent.csv')\n",
     "print(df_test.shape)"
    ]
   },
