--- a/ai/RAPIDS/English/Python/jupyter_notebook/Challenge/Gene-Expression-Classification/Backup.ipynb
+++ b/ai/RAPIDS/English/Python/jupyter_notebook/Challenge/Gene-Expression-Classification/Backup.ipynb
@@ -201,7 +201,7 @@
    ],
    "source": [
     "%%time\n",
-    "y = pd.read_csv('../../data/actual.csv')\n",
+    "y = pd.read_csv('../../../data/actual.csv')\n",
     "print(y.shape)\n",
     "y.head()"
    ]
@@ -248,11 +248,11 @@
    ],
    "source": [
     "# Import training data\n",
-    "df_train = pd.read_csv('../../data/data_set_ALL_AML_train.csv')\n",
+    "df_train = pd.read_csv('../../../data/data_set_ALL_AML_train.csv')\n",
     "print(df_train.shape)\n",
     "\n",
     "# Import testing data\n",
-    "df_test = pd.read_csv('../../data/data_set_ALL_AML_independent.csv')\n",
+    "df_test = pd.read_csv('../../../data/data_set_ALL_AML_independent.csv')\n",
     "print(df_test.shape)"
    ]
   },
@@ -2043,7 +2043,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
